--- a/flexfullwrap.html
+++ b/flexfullwrap.html
@@ -25,7 +25,7 @@
 <p>The "flex-wrap: wrap-reverse;" specifies that the flex items will wrap if necessary, in reverse order:</p>
 
 <div class="flex-container">
-  <div>1</div>
+  <div>1 BURP</div>
   <div>2</div>
   <div>3</div>  
   <div>4</div>
