--- a/snake.html
+++ b/snake.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head><link rel="stylesheet" href="stijl.css">
-</head>
-<body>
-
-<h1>Mijn Spelletjessite</h1>
-
-<div class="flex-container_1">
-    <div>
-        <h2>Spelletjes</h2>
-        <nav>
-            <ul>
-                <li><a href="index.html"      class="button">Welkom     </a></li>
-                <li><a href="snake.html"      class="button">Snake      </a></li>
-                <li><a href="soduku.html"     class="button">Soduku     </a></li>
-                <li><a href="mastermind.html" class="button">Mastermind</a></li>
-                <li><a href="galhje.html"     class="button">Hangman</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div>
-        <h2>Snake</h2>
-            <div class="flex-container_2">
-                <button type="startSnake">Start</button>
-                <button type="stopSnake">Stop</button>        
-            </div>
-        <canvas id="mySnakeCanvas" width="360" height="360" style="border:1px solid #000000;"> qqwe </canvas>
-    </div>
-</div>
-</body>
-</html>
-
+<html lang="nl">
+	<head>
+		<title>Mijn Spelletjessite</title>
+		<meta charset="utf-8" />
+		<meta name="author" content="Kristien Dauwe" />
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="stijl.css">
+	</head>
+	<body>
+		<div class="page">
+			<header>
+				<h1>Mijn Spelletjessite</h1>
+			</header>
+			<nav>
+				<h2>Mijn spelletjes</h2>
+				<ul>
+					<li><a href="index.html">Welkom</a></li>
+					<li><a href=#>Inloggen</a></li>
+					<li><a href="snake.html">Snake</a></li>
+					<li><a href=#>Boter-Kaas-Eieren</a></li>
+					<li><a href=#>Sudoku</a></li>
+					<li><a href=#>Mastermind</a></li>
+					<li><a href=#>Galgje</a></li>						
+					<li><a href=#>Cryptogramm</a></li>
+				</ul>
+			</nav>
+			<article>
+				<h2>Snake</h2>
+				<div class="buttoncontainer">
+					<input class="button" id="startSnake" type="button" value="Start">
+					<input class="button" id="StopSnake" type="button" value="Stop">
+				</div>
+				<canvas id="mySnakeCanvas" width="360" height="360"></canvas>
+			</article>
+		</div>
+	</body>
