uitgangspunt linken aan snake

--- a/snake.html
+++ b/snake.html
@@ -6,6 +6,8 @@
 		<meta name="author" content="Kristien Dauwe" />
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="stijl.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="uitgangscode.js"></script>
 	</head>
 	<body>
 		<div class="page">
