--- a/snake.html
+++ b/snake.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="stijl.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js"></script>
 		<script src="uitgangscode.js"></script>
 	</head>
 	<body>
