--- a/snake.html
+++ b/snake.html
@@ -32,7 +32,8 @@
 				<h2>Snake</h2>
 				<div class="buttoncontainer">
 					<input class="button" id="startSnake" type="button" value="Start">
-					<input class="button" id="StopSnake" type="button" value="Stop">
+					<input class="button" id="contSnake" type="button" value="Verder">
+					<input class="button" id="stopSnake" type="button" value="Stop">
 				</div>
 				<canvas id="mySnakeCanvas" width="360" height="360"></canvas>
 			</article>
