--- a/snake.html
+++ b/snake.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="stijl.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js"></script>
-		<script type="module" src="uitgangscode.js"></script>
+		<script type="module" src="ModView.js"></script>
 	</head>
 	<body>
 		<div class="page">
